# trusted-compute-MVP

./: .gitignore  404.html  README.md  add-license.sh  index.html  license-template.txt  mkdocs.yml  package-lock.json  sitemap.xml
.github/: pull_request_template.md
.github/workflows/: docs.yml  license-check.yml
api/endpoints/data-pool/: index.html
api/endpoints/health/: index.html
api/endpoints/python-execution/: index.html
api/endpoints/wasm-execution/: index.html
api/overview/: index.html
api/postman-collection/usage-guide/: index.html
attestation/client-setup/: index.html
attestation/guide/: index.html
docs/: index.md  terms.md
docs/api/: overview.md
docs/api/endpoints/: data-pool.md  health.md  python-execution.md  wasm-execution.md
docs/api/postman-collection/: usage-guide.md
docs/attestation/: client-setup.md  guide.md
docs/installation/: docker-deployment.md  sgx-mvp.md
docs/overrides/: 404.html
docs/overrides/partials/: copyright.html
docs/stylesheets/: extra.css  fonts.css
drt-manager/: .gitignore  .prettierignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  test-wallet.json
drt-manager/migrations/: deploy.ts
drt-manager/programs/drt-manager/: Cargo.toml  Xargo.toml
drt-manager/programs/drt-manager/src/: lib.rs
drt-manager/tests/: drt-manager.ts
installation/docker-deployment/: index.html
installation/sgx-mvp/: index.html
json-schema-validator/: README.md  babel.config.js  package-lock.json  package.json  vue.config.js
json-schema-validator/json-files/schema_files/: alumni_salary.json  alumni_salary_schema.json  customer_accounts.json  customer_accounts_schema.json  example-validation.ipynb  patient_genotype.json  patient_genotype.tsv  patient_genotype_schema.json  schema.json
json-schema-validator/public/: index.html
json-schema-validator/src/: json-schema-validator.vue  main.js
json-schema-validator/src/mixins/: validateMixin.js
ntc-web/: .eslintrc.json  .gitignore  README.md  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.seed.json  vercel.json
ntc-web-client/: .eslintrc.js  README.md  babel.config.js  package.json  vue.config.js
ntc-web-client/public/: index.html
ntc-web-client/src/: App.vue  main.js  router.js
ntc-web-client/src/assets/styles/: custom.scss
ntc-web-client/src/components/: CreatePool.vue  FilePicker.vue  JoinPool.vue  SchemaPreview.vue
ntc-web-client/src/components/Layout/: Footer.vue  Navbar.vue  Sidebar.vue
ntc-web-client/src/configs/: index.js  layouts.js
ntc-web-client/src/layouts/: Dashboard.vue  NoNav.vue
ntc-web-client/src/mixins/: PushMenu.js  validations.js
ntc-web-client/src/plugins/: axios.js  bootstrap-vue.js  index.js  sweatalert.js  vue-file-upload.js  vue-form-wizard.js  vue-moment.js  vuelidate.js
ntc-web-client/src/store/: auth.js  index.js
ntc-web-client/src/views/: Account.vue  Analysis-data.vue  Home.vue  Login.vue  Market.vue  Packages.vue  Pools.vue  Register.vue  Settings.vue  Tokens.vue
ntc-web/app/: AuthLayout.tsx  LayoutClient.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
ntc-web/app/analysis/: page.tsx
ntc-web/app/api/all-pools/: route.ts
ntc-web/app/api/analysis/: route.ts
ntc-web/app/api/append-data/: route.ts
ntc-web/app/api/create-data-pool/: route.ts
ntc-web/app/api/digital-rights/: route.ts
ntc-web/app/api/drt-code/: route.ts
ntc-web/app/api/drt-instances/: route.ts
ntc-web/app/dashboard/: page.tsx
ntc-web/app/drt-code/: page.tsx
ntc-web/app/drt-listings/: page.tsx
ntc-web/app/market/: page.tsx
ntc-web/app/pools/: FilePicker.tsx  PoolsTable.tsx  SchemaPreview.tsx  page.tsx  schemaValidation.tsx
ntc-web/app/select-roles/: page.tsx
ntc-web/app/smart-contract/: page.tsx
ntc-web/app/vms/: page.tsx
ntc-web/components/: BuyDrtForm.tsx  CreatePoolDashboardForm.tsx  CreatePoolForm.tsx  DeployVM.tsx  FilePicker.tsx  LoadingContent.tsx  LoadingContext.tsx  PoolAccount.tsx  RedeemDrtForm.tsx  Sidebar.tsx  TopBar.tsx  VMList.tsx  WalletBalance.tsx  WalletConnector.tsx  schemaUtils.tsx
ntc-web/components/ui/: alert-dialog.tsx  alert.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  input.tsx  label.tsx  progress.tsx  scroll-area.tsx  switch.tsx  table.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
ntc-web/hooks/: useUserProfile.ts
ntc-web/lib/: drtHelpers.ts  prisma.ts  solanaConnection.ts  useDrtProgram.ts  utils.ts
ntc-web/lib/idl/: drt_manager.json
ntc-web/prisma/: schema.prisma  seed.ts
ntc-web/scripts/: test-db.ts
ntc-web/sign-in/[[...sign-in]]/: page.tsx
ntc-web/sign-up/[[...sign-up]]/: page.tsx
ntc-web/types/: global.d.ts
overrides/partials/: copyright.html  source.html
privacy/: index.html
search/: search_index.json
sgx-mvp/: .gitignore  Cargo.toml  Makefile  README.md  attest.c  build.rs  calculate_means.py  sgx-mvp.manifest.template
sgx-mvp/.cargo/: config.toml
sgx-mvp/docker/: .gitignore  Dockerfile  build.sh  restart_aesm.sh
sgx-mvp/get-mean-wasm/: Cargo.toml  Makefile
sgx-mvp/get-mean-wasm/src/: lib.rs
sgx-mvp/get-median-wasm/: Cargo.toml  Makefile
sgx-mvp/get-median-wasm/src/: lib.rs
sgx-mvp/get-sd-wasm/: Cargo.toml  Makefile
sgx-mvp/get-sd-wasm/src/: lib.rs
sgx-mvp/github-download/: Cargo.toml
sgx-mvp/github-download/src/: lib.rs
sgx-mvp/json-append/: Cargo.toml
sgx-mvp/json-append/src/: lib.rs
sgx-mvp/keys/: .gitignore  README.md
sgx-mvp/postman/: collection.json  postman_collection.json
sgx-mvp/python-rust-impl/: Cargo.toml
sgx-mvp/python-rust-impl/src/: lib.rs
sgx-mvp/python-scripts/: calculate_mean.py  calculate_median.py  calculate_sd.py
sgx-mvp/sgx-cosmos-db/: Cargo.toml
sgx-mvp/sgx-cosmos-db/src/: lib.rs
sgx-mvp/src/: main.rs
sgx-mvp/test-data/: 2_test_data.json
sgx-mvp/wasm-test/: Cargo.toml
sgx-mvp/wasm-test/src/: lib.rs  main.rs
sgx-mvp/wasmi-impl/: .gitignore  Cargo.toml
sgx-mvp/wasmi-impl/src/: lib.rs
stylesheets/: extra.css  fonts.css
terms/: index.html
(+20 files in other folders)
