[package]
name = "sgx-mvp"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmi-impl = { path = "wasmi-impl" }
python-rust-impl = { path = "python-rust-impl" }
json-append = { path = "json-append" }
github-download = { path = "github-download" }
serde_json = "1.0.127"
anyhow = "1.0"
tokio = { version = "1.40.0", features = ["full"] }
actix-web = { version = "4", features = ["rustls-0_23"] }
rustls = "0.23"
rustls-pemfile = "2"
serde = { version = "1.0", features = ["derive"] }
aes-gcm = "0.10.3"
rand = "0.8.5"
hkdf = "0.12.4"
sha2 = "0.10.8"