# Nautilus Trusted Compute
# Copyright (C) 2025 Nautilus

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published
# by the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.

# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "sgx-mvp"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmi-impl = { path = "wasmi-impl" }
python-rust-impl = { path = "python-rust-impl" }
json-append = { path = "json-append" }
github-download = { path = "github-download" }
serde_json = "1.0.127"
anyhow = "1.0"
tokio = { version = "1.40.0", features = ["full"] }
actix-web = { version = "4", features = ["rustls-0_23"] }
rustls = "0.23"
rustls-pemfile = "2"
serde = { version = "1.0", features = ["derive"] }
aes-gcm = "0.10.3"
rand = "0.8.5"
hkdf = "0.12.4"
sha2 = "0.10.8"