[package]
name = "wasmi-impl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmi = "0.36.0"
serde_json = "1.0.127"
serde = { version = "1.0.209", features = ["derive"]}

[dev-dependencies]
wabt = "0.10.0"
